2010-08-05 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51at89S8252.h:
	  sdcc library license changed to GPL+LE

2010-08-04 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdlex.cc: regenerated,
	  fix for parch #3038644: Fix for GCC-4.4 compile error
	* device/include/z80/z180.h, device/include/hc08/mc68hc908apxx.h,
	  sdcc/device/include/hc08/mc68hc908jkjl.h:
	  sdcc library license changed to GPL+LE

2010-08-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCmpGt, genCmpLt),
	* src/mcs51/gen.c (genCmpGt, genCmpLt): fixed bug 1994062 part 1
	  (genCmp): use optimization from bug 1994062
	* src/SDCCast.c (decorateType '['):  fixed bug 1994062 part 2
	* src/SDCCset.c: cosmetic changes
	* support/regression/tests/bug1994062.c: new, added

010-08-03 Raphael Neider <rneider AT web.de>

	* device/include/pic16/stdio.h,
	* device/lib/pic16/libc/stdio/putchar.c: resurrect PUTCHAR macro,
	  fixes #3038656

2010-08-03 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: fixed bug #3038728 (consecutive &=
	  on volatile variable)

2010-08-03 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genDataPointerSet): properly determine operand size,
	  fixes #3038372

2010-08-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCast),
	* src/mcs51/gen.c (genCast): always copy the pointer
	* src/hc08/gen.c: cosmetic changes
	* src/SDCCast.h: added checkPtrCast
	* src/SDCCicode.c (geniCodeCast),
	* src/SDCCast.c (checkPtrCast): factored out of geniCodeCast,
	  (decorateType CAST): check pointer casts
	* src/SDCCerr.c,
	* src/SDCCerr.h: changed error E_CANNOT_USE_GENERIC_POINTER to warning
	  W_USING_GENERIC_POINTER
	* src/SDCCglue.c (aopLiteralLong): moved check to decorateType,
	  (pointerTypeToGPByte): exit on internal error, return -1 for GPTR warning
	  (_printPointerType): handle 4 byte pointers,
	  (printGPointerType): copy whole generic pointer when warned